# Synapse-X

./: 1.txt  CLAUDE.md  CMakeLists.txt  README.md  REASONIX.md  REFACTOR_PLAN.md  STATUS.md
client/: CLIENT_SPEC.md  CMakeLists.txt  CMakePresets.json
client/include/: CudaPreprocess.h  HttpTuner.h  MouseDevice.h  PdController.h  ReassemblyBuffer.h  TrtInference.h  UdpReceiver.h  UdpReplySender.h
client/src/: CudaPreprocess.cpp  HttpTuner.cpp  MouseDevice.cpp  PdController.cpp  TrtInference.cpp  UdpReceiver.cpp  UdpReplySender.cpp  main.cpp
client/test/src/: main.cpp
client/web/: index.html
host/: CMakeLists.txt  HOST_ARCHITECTURE.md  HOST_SPEC.md  MOUSE_CONTROL_SPEC.md
host/include/: DxgiCapturer.h  HttpTuner.h  Lz4Compressor.h  MouseController.h  UdpReplyReceiver.h  UdpSender.h
host/src/: DxgiCapturer.cpp  HttpTuner.cpp  Lz4Compressor.cpp  MouseController.cpp  UdpReplyReceiver.cpp  UdpSender.cpp  main.cpp
host/test/: test_bmp.cpp
host/web/: index.html
shared/include/: Log.h  PacketHeader.h  ReplyPacket.h
